added more pages and functionality